traefik/ingressroute.yaml
---
# Source: traefik/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: default
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-default
    helm.sh/chart: traefik-36.3.0
    app.kubernetes.io/managed-by: Helm
  annotations:
    external-dns.alpha.kubernetes.io/target: 202.215.58.76
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`traefik.mtaku3.com`)
    kind: Rule
    services:
      - kind: TraefikService
        name: api@internal
    middlewares:
      - name: authentik
  tls:
    secretName: traefik-dashboard-tls
